tests/snapshots/files__if_constant_fold2-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
@main(v0: int) {
.b1_:
  c2_: int = const 20;
  print c2_;
}
