tests/snapshots/files__if_context-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 20
@main(v0: int) {
  c1_: int = const 3;
  v2_: bool = eq c1_ v0;
  v3_: int = mul c1_ v0;
  v4_: int = select v2_ v0 v3_;
  print v4_;
  ret;
}
