tests/snapshots/files__if_context-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 20
@main(v0: int) {
  c1_: int = const 3;
  v2_: bool = eq c1_ v0;
  v3_: int = id v0;
  br v2_ .b4_ .b5_;
.b4_:
  print v3_;
  ret;
  jmp .b6_;
.b5_:
  c7_: int = const 3;
  v8_: int = mul c7_ v0;
  v3_: int = id v8_;
  print v3_;
  ret;
.b6_:
}
