tests/snapshots/files__if_context-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main(v0: int) {
  v2: bool = const true;
  print v2;
}
