tests/snapshots/files__if_context2-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 1
@main(v0: int) {
  c1_: int = const 1;
  v2_: bool = lt v0 c1_;
  c3_: int = const 0;
  v4_: int = id c3_;
  v5_: int = id v0;
  br v2_ .b6_ .b7_;
.b6_:
  v8_: bool = lt v5_ c1_;
  print v8_;
  ret;
  jmp .b9_;
.b7_:
  c10_: int = const -1;
  v11_: int = mul c10_ v0;
  v4_: int = id c3_;
  v5_: int = id v11_;
  v8_: bool = lt v5_ c1_;
  print v8_;
  ret;
.b9_:
}
