tests/snapshots/files__if_dead_code-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 1
@main(v0: int) {
  c1_: int = const 0;
  v2_: bool = lt v0 c1_;
  c3_: int = const 1;
  v4_: int = select v2_ c3_ c1_;
  print v4_;
  print v2_;
  ret;
}
