tests/snapshots/files__if_dead_code-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 1
@main(v0: int) {
.b1_:
  c2_: int = const 0;
  v3_: bool = lt v0 c2_;
  c4_: int = const 0;
  v5_: int = id c4_;
  br v3_ .b6_ .b7_;
.b6_:
  c8_: int = const 1;
  v5_: int = id c8_;
.b7_:
  print v5_;
  print v3_;
}
