tests/snapshots/files__if_dead_code-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 1
@main(v0: int) {
  c1_: int = const 0;
  v2_: bool = lt v0 c1_;
  c3_: int = const 0;
  v4_: int = id c3_;
  br v2_ .b5_ .b6_;
.b5_:
  c7_: int = const 1;
  v4_: int = id c7_;
  print v4_;
  print v2_;
  ret;
  jmp .b8_;
.b6_:
  print v4_;
  print v2_;
  ret;
.b8_:
}
