tests/snapshots/files__if_dead_code_nested-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 1
@main(v0: int) {
  c1_: int = const 1;
  v2_: bool = lt v0 c1_;
  c3_: int = const 0;
  c4_: int = const 3;
  c5_: int = const 2;
  br v2_ .b6_ .b7_;
.b6_:
  v8_: bool = lt v0 c3_;
  c9_: bool = const true;
  c10_: int = const 1;
  c11_: int = const 2;
  v12_: int = id c11_;
  v13_: bool = id c9_;
  v14_: int = id c10_;
  br v8_ .b15_ .b16_;
.b15_:
  c17_: int = const 1;
  v12_: int = id c17_;
  v13_: bool = id c9_;
  v14_: int = id c10_;
  v18_: int = id v12_;
  v19_: bool = id v13_;
  v20_: int = id v14_;
  print v20_;
  print v2_;
  print v18_;
  ret;
  jmp .b21_;
.b16_:
  v18_: int = id v12_;
  v19_: bool = id v13_;
  v20_: int = id v14_;
  print v20_;
  print v2_;
  print v18_;
  ret;
  jmp .b21_;
.b7_:
  v22_: bool = gt v0 c5_;
  c23_: bool = const false;
  c24_: int = const 0;
  c25_: int = const 2;
  v26_: int = id c25_;
  v27_: bool = id c23_;
  v28_: int = id c24_;
  br v22_ .b29_ .b30_;
.b29_:
  v31_: bool = gt v0 c4_;
  c32_: int = const 4;
  v33_: int = id c32_;
  v34_: bool = id c23_;
  v35_: int = id c24_;
  br v31_ .b36_ .b37_;
.b36_:
  c38_: int = const 3;
  v33_: int = id c38_;
  v34_: bool = id c23_;
  v35_: int = id c24_;
  v26_: int = id v33_;
  v27_: bool = id v34_;
  v28_: int = id v35_;
  v18_: int = id v26_;
  v19_: bool = id v27_;
  v20_: int = id v28_;
  print v20_;
  print v2_;
  print v18_;
  ret;
  jmp .b21_;
.b37_:
  v26_: int = id v33_;
  v27_: bool = id v34_;
  v28_: int = id v35_;
  v18_: int = id v26_;
  v19_: bool = id v27_;
  v20_: int = id v28_;
  print v20_;
  print v2_;
  print v18_;
  ret;
  jmp .b21_;
.b30_:
  v18_: int = id v26_;
  v19_: bool = id v27_;
  v20_: int = id v28_;
  print v20_;
  print v2_;
  print v18_;
  ret;
.b21_:
}
