tests/snapshots/files__if_interval-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 1
@main(v0: int) {
  c1_: int = const 0;
  v2_: bool = le v0 c1_;
  c3_: int = const 3;
  v4_: int = id c3_;
  br v2_ .b5_ .b6_;
.b5_:
  v4_: int = id c1_;
  c7_: int = const 10;
  v8_: bool = lt v4_ c7_;
  print v8_;
  ret;
  jmp .b9_;
.b6_:
  c7_: int = const 10;
  v8_: bool = lt v4_ c7_;
  print v8_;
  ret;
.b9_:
}
